@@ -1,3 +1,7 @@
+2021-03-21  Allen D. Ball  <ball@hcf.dev>
+
+	* src/generate-dependencies-resources.bash: Initial writing.
+
 2021-03-20  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/dependency/Resolver.java:
